fix: adjust vertical spacing of Article Card List

--- a/html/themes/custom/common_design_subtheme/components/gho-article-card-list/gho-article-card-list.css
+++ b/html/themes/custom/common_design_subtheme/components/gho-article-card-list/gho-article-card-list.css
@@ -1,5 +1,6 @@
 .gho-article-card-list {
-  --gho-article-card-list-gap: 1.25rem;
+  --gho-article-card-list-gap-row: 2.25rem;
+  --gho-article-card-list-gap-col: 1.25rem;
   margin-top: 4.5rem;
 }
 
@@ -16,7 +17,8 @@
   padding: 0;
   display: flex;
   flex-flow: row wrap;
-  gap: var(--gho-article-card-list-gap);
+  row-gap: var(--gho-article-card-list-gap-row);
+  column-gap: var(--gho-article-card-list-gap-col);
 }
 
 @media screen and (min-width: 606px) {
@@ -26,7 +28,7 @@
   .gho-article-card-list__list .field__items > .field__item {
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: calc((100% - (2 * var(--gho-article-card-list-gap))) / 3);
+    flex-basis: calc((100% - (2 * var(--gho-article-card-list-gap-col))) / 3);
   }
 
   /**
@@ -34,6 +36,6 @@
    * first row 2-col, then the rest are still 3-col.
    */
   .gho-article-card-list--show-2col .field__items > .field__item:nth-child(-n + 2) {
-    flex-basis: calc((100% - var(--gho-article-card-list-gap)) / 2);
+    flex-basis: calc((100% - var(--gho-article-card-list-gap-col)) / 2);
   }
 }
